# url-shortener

./: .editorconfig  .gitignore  flake.nix  pyproject.toml
console/: urls.py  views.py
links/: forms.py  models.py  shortener.py  tests_shortener.py  urls.py  views.py
links/migrations/: 0001_initial.py
static/css/: style.css
static/scss/: style.scss
templates/: base.html  home.html
templates/console/: index.html
templates/includes/: _messages.html  _navbar.html
templates/links/: create.html  list.html
templates/links/includes/: _form.html
templates/users/: login.html  register.html
url_shortener/: redirect.py  settings.py  urls.py
users/: forms.py  urls.py  views.py
