[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "A url shortener written in django"
authors = ["Christos Veligkos <cveligkos@gmail.com>"]
readme = "README.md"
packages = [{ include = "url_shortener" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-htmx = "^1.16.0"
django-browser-reload = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
